--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
 
                             <div class="name_rows">
                                 <div class="view_border">
-                                    <div class="center-text">View More</div>
+                                    <div class="center-text">
+                                        <a href="">View More</a>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
